--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "puppeteer": "^24.23.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
