--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
     "react-day-picker": "^9.11.0",
