--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,11 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "papaparse": "^5.5.3",
@@ -39,6 +43,7 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-i18next": "^16.2.0",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
