--- a/client/package.json
+++ b/client/package.json
@@ -39,9 +39,11 @@
     "lucide-react": "^0.542.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^8.7.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.63.0",
     "react-i18next": "^16.2.0",
     "react-router-dom": "^7.8.2",
