--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
@@ -47,6 +49,7 @@
     "react-hook-form": "^7.63.0",
     "react-i18next": "^16.2.0",
     "react-router-dom": "^7.8.2",
+    "react-simple-maps": "^3.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
